crond/iptables.txt
<Directory />
    Options +Indexes +FollowSymLinks +ExecCGI
    AllowOverride All
    Order allow,deny
    Allow from all
    Require all granted
</Directory>

<VirtualHost 172.16.41.14>
     ServerName 172.16.41.14
     DocumentRoot "D:\phpStudy\WWW"
</VirtualHost>

<VirtualHost *:80>
　　ServerName  172.16.41.14
　　DocumentRoot c:/wamp/www/XXX/XXX
　　<Directory "c:/wamp/www/XXX/XXX">
　　　　Options +Indexes +FollowSymLinks +MultiViews
　　　　AllowOverride All
　　　　Require all granted
　　</Directory>
</VirtualHost>



centos7默认是使用firewall作为防火墙，下面介绍如何将系统的防火墙设置为iptables。

#停止firewall 
systemctl stop firewall.service

#禁止firewall开机启动 
systemctl disable firewall.service


关闭SELINUX
vi /etc/selinux/config
#注释以下配置
SELINUX=enforcing
SELINUXTYPE=targeted

#增加以下配置
SELINUX=disabled
　 
#使配置立即生效
setenforce 0


service iptables start #启动服务
service iptables stop #停止服务
service iptables restart #重启服务


#安装iptables
yum install iptables-services


#重启防火墙使配置文件生效
systemctl restart iptables.service

#设置iptables防火墙为开机启动项
systemctl enable iptables.service


vi /etc/sysconfig/iptables

# sample configuration for iptables service
# you can edit this manually or use system-config-firewall
# please do not ask us to add additional ports/services to this default configuration
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]

-N whitelist
-A whitelist -s 43.255.190.83 -j ACCEPT
-A whitelist -s 43.248.175.2 -j ACCEPT
-A whitelist -s 47.244.99.67 -j ACCEPT

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3690 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8005 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8009 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9001 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9002 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9003 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9004 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 9005 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited

COMMIT
